# DRF-tutorial

./: .gitignore  pyproject.toml
app/: Untitled.ipynb  Untitled1.ipynb
app/config/: settings.py
app/snippets/: models.py  serializers.py
app/snippets/migrations/: 0001_initial.py  0002_auto_20200403_0507.py
